# openmodal

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
architecture/: index.html
benchmarks/: README.md  runner.py
benchmarks/tasks/: base.py  sandbox_create.py  sandbox_exec.py  sandbox_image.py  sandbox_lifecycle.py  sandbox_scale.py
docs/: architecture.md  how_it_works.md  index.md  providers.md  roadmap.md  setup.md
docs/examples/: cooperbench.md  harbor.md  hello_world.md  index.md  sandbox.md  sft_finetune.md  vllm_serving.md  web_scraper.md
docs/stylesheets/: extra.css
examples/: gpu_matmul.py  hello_world.py  index.html  sandbox.py  sft_finetune.py  swerex_test.py  uptime_monitor.py  vllm_serving.py  webscraper.py  webscraper_requests.py  webscraper_requests_modal.py
examples/cooperbench/: index.html
examples/harbor/: index.html
examples/hello_world/: index.html
examples/sandbox/: index.html
examples/sft_finetune/: index.html
examples/vllm_serving/: index.html
examples/web_scraper/: index.html
javascripts/: mermaid-init.js
providers/: index.html
roadmap/: index.html
search/: search_index.json
setup/: index.html
src/openmodal/: __init__.py  _async_utils.py  _decorators.py  app.py  dict.py  function.py  image.py  process.py  queue.py  redis_backend.py  remote.py  sandbox.py  schedule.py  secret.py  volume.py
src/openmodal/cli/: __init__.py  console.py  deploy.py  logs.py  monitor.py  prompt.py  ps.py  run.py  secret.py  setup.py  stop.py
src/openmodal/integrations/: harbor_env.py
src/openmodal/monitor/: collector.py  dashboard.py  history.py
src/openmodal/providers/: __init__.py  base.py  volume_helpers.py
src/openmodal/providers/aws/: __init__.py  build.py  config.py  ecr.py  eks.py  eks_setup.py  s3.py
src/openmodal/providers/azure/: __init__.py  acr.py  aks.py  aks_setup.py  build.py  config.py  storage.py
src/openmodal/providers/cluster/: __init__.py  cluster.py  config.py  ssh.py
src/openmodal/providers/gcp/: build.py  compute.py  config.py  gke.py  gke_setup.py  network.py  registry.py  secrets.py  (+1 more)
src/openmodal/runtime/: agent.py  cron_runner.py  startup.py  web_server.py
stylesheets/: mermaid.css
(+1 files in other folders)
