[project]
name = "openmodal"
version = "0.1.0"
description = "Serverless GPU compute on GCP."
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "cloudpickle>=3.0",
    "requests>=2.28",
]

[project.scripts]
openmodal = "openmodal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmodal"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty]
python-version = "3.11"
src = ["src"]
