[project]
name = "openmodal"
version = "0.2.1"
description = "Serverless GPU compute on GCP."
requires-python = "==3.12.*"
dependencies = [
    "click>=8.3",
    "kubernetes>=35.0",
    "google-auth>=2.49",
    "requests>=2.33",
]

[project.optional-dependencies]
harbor = ["harbor", "tenacity>=9.0"]

[project.scripts]
openmodal = "openmodal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmodal"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty]
python-version = "3.11"
src = ["src"]
