[project]
name = "openmodal"
version = "0.3.7"
description = "Run Modal on your own cloud. Open-source, cloud-agnostic serverless GPU compute."
requires-python = "==3.12.*"
dependencies = [
    "click>=8.3",
    "kubernetes>=35.0",
    "google-auth>=2.49",
    "requests>=2.33",
    "rich>=13.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.35", "awscrt>=0.31"]
harbor = ["harbor", "tenacity>=9.0"]

[project.scripts]
openmodal = "openmodal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmodal"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
]
